[workspace]
members = [
  # CI benchmarks
  "ci-bench",
  # Network-based tests
  "connect-tests",
  # tests and example code
  "examples",
  # the main library and tests
  "rustls",
  # example of custom provider
  "provider-example",
]
default-members = [
  "examples",
  "rustls",
]
exclude = ["admin/rustfmt"]
resolver = "2"

[patch.crates-io]
rustls-webpki = { git = "https://github.com/rustls/webpki", ref = "b528297c94f637ef16ce6b1318fe38ec18a9a8a0" }
